--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -15,7 +15,7 @@
         android:background="@color/white">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/product_recycler"
+            android:id="@+id/movie_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
