--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,86 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_retro">
 
     <!-- Logo -->
-
-    <!-- Nombre de Usuario -->
-
     <ImageView
         android:id="@+id/register_logo"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:src="@drawable/logo_app"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="254dp" />
+        android:contentDescription="@string/logo_description"
+        android:layout_marginTop="180dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="347dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:backgroundTint="#c78f53"
-        android:text="Registrarse"
-        android:textColor="@android:color/white"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="648dp" />
 
-    <EditText
-        android:id="@+id/edit_register_repeat_password"
-        android:layout_width="347dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:background="@android:color/transparent"
-        android:hint="Repetir Contraseña"
-        android:inputType="textPassword"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="592dp" />
-
-    <EditText
-        android:id="@+id/edit_register_password"
-        android:layout_width="347dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:background="@android:color/transparent"
-        android:hint="Contraseña"
-        android:inputType="textPassword"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="552dp" />
-
-    <EditText
-        android:id="@+id/edit_register_email"
-        android:layout_width="347dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:background="@android:color/transparent"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="515dp" />
-
+    <!-- Nombre de Usuario -->
     <EditText
         android:id="@+id/edit_register_username"
-        android:layout_width="347dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
+        android:minHeight="48dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
-        android:hint="Nombre de Usuario"
+        android:hint="@string/username_hint"
+        android:autofillHints="username"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="480dp" />
+        app:layout_constraintTop_toBottomOf="@id/register_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Email -->
+    <EditText
+        android:id="@+id/edit_register_email"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@android:color/transparent"
+        android:hint="@string/email_hint"
+        android:autofillHints="emailAddress"
+        android:inputType="textEmailAddress"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/edit_register_username"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Contraseña -->
+    <EditText
+        android:id="@+id/edit_register_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@android:color/transparent"
+        android:hint="@string/password_hint"
+        android:autofillHints="password"
+        android:inputType="textPassword"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/edit_register_email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Repetir Contraseña -->
+    <EditText
+        android:id="@+id/edit_register_repeat_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@android:color/transparent"
+        android:hint="@string/repeat_password_hint"
+        android:autofillHints="password"
+        android:inputType="textPassword"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/edit_register_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Botón Registrarse -->
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="#c78f53"
+        android:text="@string/btn_register"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/edit_register_repeat_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
