Guardado el favorito entre pantallas

--- a/app/src/main/res/layout/activity_favorito.xml
+++ b/app/src/main/res/layout/activity_favorito.xml
@@ -8,27 +8,13 @@
     android:background="@drawable/fondo_retro"
     tools:context=".movies.MoviesListActivity">
 
-    <!-- Botón Favoritos arriba -->
-    <Button
-        android:id="@+id/button_favorites"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Favoritos"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"/>
-
-    <!-- RecyclerView debajo del botón -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movie_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/button_favorites"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
